fixed loading progress bar display on small screens

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -482,13 +482,13 @@ section#main {
   border-top: none;
   height: 30px;
   margin: 0 10px;
-  max-width: 500px;
+  max-width: 480px;
   overflow: hidden;
   padding: 0;
   position: absolute;
   top: 0;
   transition: 0.5s;
-  width: 100%;
+  width: calc(100% - 25px);
 }
   .progress .progress__text {
     overflow: hidden;
